backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: build-publisher-backend
  labels:
    app: build-publisher-backend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 9090
  selector:
    app: build-publisher-backend
  sessionAffinity: None
