backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: helidon-build-publisher-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /backend(/|$)(.*)
        backend:
          serviceName: helidon-build-publisher-backend
          servicePort: 9190
